# renderflow

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  Taskfile.yml  cliff.toml  mkdocs.yml  pyproject.toml  release.toml  renderflow.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: research-paper.agent.md
.github/specs/: reflector.spec.md
.github/specs/architecture/: README.md  document.spec.md
.github/specs/architecture/domain/: ontology.spec.md  personal-model.spec.md
.github/specs/architecture/experience/: design-system.spec.md  design.spec.md
.github/specs/architecture/foundation/: architecture.spec.md  foundations.spec.md  methodology.spec.md  roadmap.spec.md  system.spec.md
.github/specs/architecture/governance/: decisions.spec.md
.github/specs/architecture/identity/: manifesto.spec.md  pillars.spec.md  principles.spec.md  purpose.spec.md  vision.spec.md
.github/specs/architecture/meta/: ai-constitution.spec.md  epistemology.spec.md  meta.spec.md
.github/specs/repository/: repository.spec.md
.github/workflows/: benchmarks.yml  bump-version.yml  ci.yml  commitlint.yml  docs.yml  release.yml
Formula/: renderflow.rb
benches/: cache.rs  dag_execution.rs  graph_planner.rs  large_graph.rs
docs/: index.md
docs/ai-guide/: configuration.md  overview.md
docs/architecture/: dag-execution.md  execution-plans.md  graph-engine.md  overview.md  plugin-architecture.md
docs/architecture/domain/: ONTOLOGY.md  PERSONAL_MODEL.md
docs/architecture/experience/: DESIGN.md  DESIGN_SYSTEM.md
docs/architecture/foundation/: ARCHITECTURE.md  FOUNDATIONS.md  METHODOLOGY.md  ROADMAP.md  SYSTEM.md
docs/architecture/governance/: DECISIONS.md
docs/architecture/identity/: MANIFESTO.md  PILLARS.md  PRINCIPLES.md  PURPOSE.md  VISION.md
docs/architecture/meta/: AI_CONSTITUTION.md  EPISTEMOLOGY.md  META.md
docs/cli-reference/: ai.md  audit.md  build.md  graph.md  index.md  inspect.md  plugin.md  watch.md
docs/examples/: hello-world.md  multi-output.md
docs/getting-started/: cli-overview.md  installation.md  quickstart.md
docs/javascripts/: mermaid.js
docs/plugin-guide/: developing.md  overview.md
docs/transform-reference/: emoji.md  index.md  syntax-highlight.md  variables.md
docs/user-guide/: ai.md  benchmarking.md  caching.md  configuration.md  faq.md  optimization.md  pipelines.md  plugins.md  supported-formats.md  transforms.md  troubleshooting.md
examples/: input.md  library_basic.rs  plugin_registration.rs
examples/hello-world/: README.md  hello.md  renderflow.yaml
examples/transforms/: README.md  document.md  renderflow.yaml
pkg/aur/renderflow/: PKGBUILD
pkg/aur/renderflow-git/: PKGBUILD
pkg/chocolatey/: renderflow.nuspec
pkg/chocolatey/tools/: chocolateyinstall.ps1
pkg/scoop/: renderflow.json
renderflow/: __init__.py  cli.py
scripts/: generate_supported_formats_doc.py  install.sh
snap/: snapcraft.yaml
src/: app.rs  assets.rs  cache.rs  cli.rs  compat.rs  config.rs  deps.rs  error.rs  files.rs  incremental.rs  input_format.rs  lib.rs  main.rs  optimization.rs  template.rs
src/adapters/: command.rs
src/ai/: metrics.rs  mod.rs  output.rs  provider.rs  request.rs  retry.rs
src/ai/providers/: mod.rs  ollama.rs  openai.rs
src/audio/: ffmpeg.rs  format.rs  mod.rs  profile.rs  strategy.rs
src/commands/: ai.rs  audit.rs  build.rs  graph.rs  graph_build.rs  inspect.rs  mod.rs  plugin.rs  system.rs  watch.rs
src/graph/: dag_executor.rs  definition.rs  definition_registry.rs  execution_plan.rs  format.rs  input_kind.rs  mod.rs  multi_target.rs  pathfinding.rs  transform_edge.rs
src/graph/renderers/: dot.rs  json_renderer.rs  markdown.rs  mermaid.rs  mod.rs  text.rs  yaml_renderer.rs
src/image/: ffmpeg.rs  format.rs  mod.rs  profile.rs  strategy.rs
src/pipeline/: mod.rs  pandoc_step.rs  pipeline.rs  step.rs  strategy_step.rs
src/strategies/: docx.rs  html.rs  mod.rs  pandoc_args.rs  pdf.rs  selector.rs  strategy.rs
src/transforms/: aggregation.rs  ai.rs  command.rs  emoji.rs  mod.rs  plugin.rs  registry.rs  syntax_highlight.rs  transform.rs  variable.rs  yaml_loader.rs
templates/: default.html
templates/research/: research.html  research.tex
tests/: cli_tests.rs  graph_integration_test.rs  pipeline_integration_test.rs  test_cli.py
tests/common/: mod.rs
