[package]
name = "renderflow"
version = "0.1.0"
edition = "2021"
description = "Spec-driven document rendering engine"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

sha2 = "0.10"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

tera = "1"

indicatif = "0.17"
rayon = "1"

tempfile = "3"

notify = "6"
notify-debouncer-mini = "0.4"

[dev-dependencies]
