[package]
name = "renderflow"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Spec-driven document rendering engine"
readme = "README.md"
license = "MIT"
repository = "https://github.com/egohygiene/renderflow"
homepage = "https://github.com/egohygiene/renderflow"
keywords = ["document", "rendering", "pandoc", "markdown", "pdf"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
authors = ["Ego Hygiene <egohygiene@users.noreply.github.com>"]
exclude = [
    "dist/",
    "audits/",
    ".devcontainer/",
    ".github/",
    ".commitlintrc.yml",
    "Taskfile.yml",
    "Cross.toml",
    "cliff.toml",
    "renderflow.code-workspace",
    "renderflow.yaml",
]

[dependencies]
clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"

sha2 = "0.10"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

tera = "1"

indicatif = "0.17"
rayon = "1"

notify = "6.1"
notify-debouncer-mini = "0.4"

itertools = "0.14"

petgraph = "0.8"

tempfile = "3"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/renderflow", dest = "/usr/bin/renderflow", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/licenses/renderflow/LICENSE", mode = "0644", doc = true },
]

[package.metadata.deb]
maintainer = "Ego Hygiene <egohygiene@users.noreply.github.com>"
copyright = "2024, Ego Hygiene"
license-file = ["LICENSE", "0"]
extended-description = "Spec-driven document rendering engine for transforming Markdown into PDF, HTML, and DOCX output."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/renderflow", "usr/bin/", "755"],
]

[dev-dependencies]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
